--- a/interfaz.html
+++ b/interfaz.html
@@ -44,12 +44,13 @@
                 <div class="card-header">
                     <h3>Resultado</h3>
                 </div>
+                
 
                 <div class="tabs-container">
                     
                     <div class="tabs-header">
                         <button class="tab-btn" data-target="lexer">Lexer</button>
-                        <button class="tab-btn" data-target="parser">Estructuras</button>
+                        <button class="tab-btn" data-target="parser">Estructura si-mientras</button>
                         <button class="tab-btn active" data-target="parserll1">Parser LL(1)</button>
                     </div>
 
@@ -63,7 +64,7 @@
 
                         <div id="parser" class="tab-pane">
                             <div id="panelResultados">
-                                <p class="empty-msg">Los resultados de estructuras apareceran aqui...</p>
+                                <p class="empty-msg">Los resultados apareceran aqui despues de Ejecutar...</p>
                             </div>
                         </div>
 
@@ -79,6 +80,6 @@
         </div>
     </div>
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
